WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153770
Crash using WKPDFView, in -[UIPDFPageView showContent]
https://bugs.webkit.org/show_bug.cgi?id=153770
Summary
Crash using WKPDFView, in -[UIPDFPageView showContent]
Tim Horton
Reported
2016-02-01 15:13:21 PST
Crash using WKPDFView, in -[UIPDFPageView showContent]
Attachments
Patch
(2.36 KB, patch)
2016-02-01 15:13 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-02-01 15:13:53 PST
Created
attachment 270433
[details]
Patch
WebKit Commit Bot
Comment 2
2016-02-01 15:31:36 PST
Comment on
attachment 270433
[details]
Patch Clearing flags on attachment: 270433 Committed
r195982
: <
http://trac.webkit.org/changeset/195982
>
WebKit Commit Bot
Comment 3
2016-02-01 15:31:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug