Crash using WKPDFView, in -[UIPDFPageView showContent] https://bugs.webkit.org/show_bug.cgi?id=153770 <rdar://problem/20157864>

Reviewed by Anders Carlsson.

When scrolling, we throw away UIPDFPageViews, but forget to unhook their delegates.
In some cases (also because their delegate is a raw pointer, not weak), they can call
back into a deleted WKPDFView, causing a crash.

* UIProcess/ios/WKPDFView.mm:
(detachViewForPage):
Add a helper to detach a page view, and unhook its delegates.

(-[WKPDFView _clearPages]):
(-[WKPDFView _revalidateViews]):
Make use of the new helper.


Canonical link: https://commits.webkit.org/171846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195982 268f45cc-cd09-0410-ab3c-d52691b4dbfc